--- a/3b/index.html
+++ b/3b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1280, initial-scale=1.0">
     <title>Welcome to Vista Bay, Zihua!</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -21,7 +21,6 @@
         .font-pacifico {
             font-family: 'Pacifico', cursive;
         }
-        /* Style for the background image */
         .bg-hero {
             background-image: url('https://yb-denav.github.io/vistabay/images/bg_brickwall.jpg');
             background-size: cover;
@@ -30,28 +29,26 @@
     </style>
 </head>
 <body class="bg-hero flex items-center justify-center min-h-screen p-4">
-    <!-- This container enforces the 16:9 aspect ratio -->
-    <div class="w-full max-w-6xl aspect-video">
+    <!-- Fixed 1280x800 container -->
+    <div class="w-[1280px] h-[800px] flex items-center justify-center mx-auto">
         <!-- Main slide content container -->
         <div class="w-full h-full flex items-center justify-center">
             <!-- Semi-transparent card for readability -->
-            <div class="bg-white bg-opacity-80 backdrop-blur-sm rounded-2xl shadow-2xl p-8 md:p-12 w-11/12 h-11/12 text-center flex flex-col justify-center">
-                
+            <div class="bg-white bg-opacity-80 backdrop-blur-sm rounded-2xl shadow-2xl p-8 md:p-12 w-full h-full text-center flex flex-col justify-center">
                 <!-- Headline -->
-                <h1 class="font-pacifico text-8xl md:text-9xl text-cyan-700 mb-12">
+                <h1 class="font-pacifico text-7xl text-cyan-700 mb-10">
                     ¡Bienvenidos a Vista Bay, Zihua!
                 </h1>
-
                 <!-- Wi-Fi Information -->
-                <div class="bg-gray-50 rounded-xl p-8 text-left shadow-inner">
+                <div class="bg-gray-50 rounded-xl p-6 text-left shadow-inner max-w-3xl mx-auto">
                     <div class="flex flex-col md:flex-row items-center justify-between gap-8">
                         <!-- Left Side: Text Info -->
                         <div class="flex-1">
                             <div class="flex items-center mb-4">
-                                <i class="fas fa-wifi text-5xl text-cyan-600 mr-4"></i>
-                                <h2 class="text-5xl font-bold text-gray-800">Connect to Wi-Fi</h2>
+                                <i class="fas fa-wifi text-4xl text-cyan-600 mr-4"></i>
+                                <h2 class="text-3xl font-bold text-gray-800">Connect to Wi-Fi</h2>
                             </div>
-                            <div class="space-y-6 text-5xl">
+                            <div class="space-y-4 text-2xl">
                                 <p class="text-gray-700">
                                     <span class="font-semibold">Network:</span> 
                                     <span class="text-gray-900">101 Vista Bay</span>
@@ -64,12 +61,11 @@
                         </div>
                         <!-- Right Side: QR Code -->
                         <div class="flex-shrink-0 text-center">
-                            <p class="font-semibold text-2xl text-gray-700 mb-2">Scan to Connect</p>
-                            <img src="https://yb-denav.github.io/vistabay/images/qr_wifi.svg" alt="Wi-Fi QR Code" class="rounded-lg shadow-md mx-auto" width="250" height="250">
+                            <p class="font-semibold text-xl text-gray-700 mb-2">Scan to Connect</p>
+                            <img src="https://yb-denav.github.io/vistabay/images/qr_wifi.svg" alt="Wi-Fi QR Code" class="rounded-lg shadow-md mx-auto" width="180" height="180">
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
