--- a/3b/index.html
+++ b/3b/index.html
@@ -12,6 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script>
+        // Toggle this to show/hide the version overlay
+        var showVersion = true; // Set to false to hide
+    </script>
     <style>
         body {
             font-family: 'Montserrat', sans-serif;
@@ -69,5 +73,19 @@
             </div>
         </div>
     </div>
+
+    <!-- Version number in bottom-right corner -->
+    <div id="version-overlay" style="display:none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1000; pointer-events: none;">
+        <div class="flex items-center justify-center w-full h-full">
+            <span class="bg-white bg-opacity-80 text-5xl font-mono text-gray-700 rounded-2xl px-10 py-6 shadow-2xl border-2 border-cyan-400">
+                v1
+            </span>
+        </div>
+    </div>
+    <script>
+        if (showVersion) {
+            document.getElementById('version-overlay').style.display = 'block';
+        }
+    </script>
 </body>
 </html>
