--- a/3b/index.html
+++ b/3b/index.html
@@ -66,7 +66,7 @@
                         <!-- Right Side: QR Code -->
                         <div class="flex-shrink-0 text-center">
                             <p class="font-semibold text-xl text-gray-700 mb-2">Scan to Connect</p>
-                            <img src="https://yb-denav.github.io/vistabay/images/qr_wifi.svg" alt="Wi-Fi QR Code" class="rounded-lg shadow-md mx-auto" width="180" height="180">
+                            <img src="https://yb-denav.github.io/vistabay/images/qr_wifi.png" alt="Wi-Fi QR Code" class="rounded-lg shadow-md mx-auto" width="180" height="180">
                         </div>
                     </div>
                 </div>
