--- a/3b/index.html
+++ b/3b/index.html
@@ -75,16 +75,56 @@
     </div>
 
     <!-- Version number in bottom-right corner -->
-    <div id="version-overlay" style="display:none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: 1000; pointer-events: none;">
-        <div class="flex items-center justify-center w-full h-full">
-            <span class="bg-white bg-opacity-80 text-5xl font-mono text-gray-700 rounded-2xl px-10 py-6 shadow-2xl border-2 border-cyan-400">
-                v1
-            </span>
+    <div id="version-overlay" style="display:none; position: fixed; top: 16px; left: 16px; z-index: 1000; pointer-events: none;">
+        <div style="background: rgba(255,255,255,0.8); font-size: 2rem; font-family: monospace; color: #374151; border-radius: 1rem; padding: 2rem 3rem; box-shadow: 0 8px 32px rgba(0,0,0,0.2); border: 2px solid #22d3ee; text-align: left; max-width: 40vw;">
+            <div style="font-size: 2.5rem; margin-bottom: 1rem;">v1</div>
+            <div id="env-info" style="font-size: 1.2rem; white-space: pre-line;"></div>
         </div>
     </div>
     <script>
+        function getEnvInfo() {
+            var ua = navigator.userAgent;
+            var browser = "Unknown";
+            var os = "Unknown";
+            var device = "Unknown";
+            // Browser detection
+            if (ua.indexOf("Chrome") > -1 && ua.indexOf("Edge") === -1 && ua.indexOf("OPR") === -1) browser = "Chrome";
+            else if (ua.indexOf("Firefox") > -1) browser = "Firefox";
+            else if (ua.indexOf("Safari") > -1 && ua.indexOf("Chrome") === -1) browser = "Safari";
+            else if (ua.indexOf("Edge") > -1) browser = "Edge";
+            else if (ua.indexOf("OPR") > -1 || ua.indexOf("Opera") > -1) browser = "Opera";
+            else if (ua.indexOf("MSIE") > -1 || ua.indexOf("Trident") > -1) browser = "Internet Explorer";
+
+            // OS detection
+            if (ua.indexOf("Win") > -1) os = "Windows";
+            else if (ua.indexOf("Mac") > -1) os = "MacOS";
+            else if (ua.indexOf("Linux") > -1) os = "Linux";
+            else if (ua.indexOf("Android") > -1) os = "Android";
+            else if (ua.indexOf("like Mac") > -1) os = "iOS";
+
+            // Device detection
+            if (/Mobi|Android/i.test(ua)) device = "Mobile";
+            else if (/Tablet|iPad/i.test(ua)) device = "Tablet";
+            else device = "Desktop";
+
+            var screenW = window.screen.width;
+            var screenH = window.screen.height;
+            var availW = window.screen.availWidth;
+            var availH = window.screen.availHeight;
+            var pixelRatio = window.devicePixelRatio || 1;
+            var info =
+                `Browser: ${browser}\n` +
+                `OS: ${os}\n` +
+                `Device: ${device}\n` +
+                `User Agent: ${ua}\n` +
+                `Screen: ${screenW}x${screenH} (avail: ${availW}x${availH})\n` +
+                `Device Pixel Ratio: ${pixelRatio}\n` +
+                `Window: ${window.innerWidth}x${window.innerHeight}`;
+            return info;
+        }
         if (showVersion) {
             document.getElementById('version-overlay').style.display = 'block';
+            document.getElementById('env-info').textContent = getEnvInfo();
         }
     </script>
 </body>
