--- a/3b/index.html
+++ b/3b/index.html
@@ -33,26 +33,26 @@
     </style>
 </head>
 <body class="bg-hero flex items-center justify-center min-h-screen p-4">
-    <!-- Fixed 1280x800 container -->
-    <div class="w-[1280px] h-[800px] flex items-center justify-center mx-auto">
+    <!-- Fixed 960x540 container -->
+    <div class="w-[960px] h-[540px] flex items-center justify-center mx-auto">
         <!-- Main slide content container -->
         <div class="w-full h-full flex items-center justify-center">
             <!-- Semi-transparent card for readability -->
             <div class="bg-white bg-opacity-80 backdrop-blur-sm rounded-2xl shadow-2xl p-8 md:p-12 w-full h-full text-center flex flex-col justify-center">
                 <!-- Headline -->
-                <h1 class="font-pacifico text-7xl text-cyan-700 mb-10">
+                <h1 class="font-pacifico text-5xl text-cyan-700 mb-8">
                     ¡Bienvenidos a Vista Bay, Zihua!
                 </h1>
                 <!-- Wi-Fi Information -->
                 <div class="bg-gray-50 rounded-xl p-6 text-left shadow-inner max-w-3xl mx-auto">
-                    <div class="flex flex-col md:flex-row items-center justify-between gap-8">
+                    <div class="flex flex-col md:flex-row items-center justify-between gap-6">
                         <!-- Left Side: Text Info -->
                         <div class="flex-1">
                             <div class="flex items-center mb-4">
-                                <i class="fas fa-wifi text-4xl text-cyan-600 mr-4"></i>
-                                <h2 class="text-3xl font-bold text-gray-800">Connect to Wi-Fi</h2>
+                                <i class="fas fa-wifi text-3xl text-cyan-600 mr-3"></i>
+                                <h2 class="text-2xl font-bold text-gray-800">Connect to Wi-Fi</h2>
                             </div>
-                            <div class="space-y-4 text-2xl">
+                            <div class="space-y-3 text-xl">
                                 <p class="text-gray-700">
                                     <span class="font-semibold">Network:</span> 
                                     <span class="text-gray-900">101 Vista Bay</span>
@@ -66,7 +66,7 @@
                         <!-- Right Side: QR Code -->
                         <div class="flex-shrink-0 text-center">
                             <p class="font-semibold text-xl text-gray-700 mb-2">Scan to Connect</p>
-                            <img src="https://yb-denav.github.io/vistabay/images/qr_wifi.png" alt="Wi-Fi QR Code" class="rounded-lg shadow-md mx-auto" width="180" height="180">
+                            <img src="https://yb-denav.github.io/vistabay/images/qr_wifi.png" alt="Wi-Fi QR Code" class="rounded-lg shadow-md mx-auto" width="120" height="120">
                         </div>
                     </div>
                 </div>
